public/stylesheets/style.css
@font-face {font-family: "GochiHand-Regular"; src: url("../fonts/GochiHand-Regular.ttf"); }
@font-face {font-family: "ScopeOne-Regular"; src: url("../fonts/ScopeOne-Regular.ttf"); }

body, html {
    margin: 0;
    padding: 0;
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100vh;
    background-color: #e798ae;
}

#inner_container {
    background-color: #4a1c40;
    padding: 100px 225px;
    border-radius: 33% 5%;
    display: flex;
}

#inner_container h1 {
    color: #fbf4f6;
    font-family: GochiHand-Regular;
    font-size: 44px;
}

#inner_container h3 {
    color: #fbf4f6;
    font-family: GochiHand-Regular;
    font-size: 24px;
}

img {
    height: 300px;
    width: 200px;
    padding-right: 25px;
}

#typetotranslate {
    display: inline-block;
}
  
.submit {
    background-color: #962d2d;
    color: #fbf4f6;
}

.transl {
    font-size: 18px;
    color: #fbf4f6;
    font-family: ScopeOne-Regular;
}

